<resources>
    <string name="app_name">FotoMulta</string>
    <string name="title_activity_map">FotoMulta</string>

    <!-- camera types-->
    <string-array name="camera_types">
        <item>Select one type</item>
        <item>Traffic light</item>
        <item>Visible</item>
        <item>Hidden</item>
    </string-array>

    <!-- common words-->
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>

    <!-- marker creation-->
    <string name="add_marker_question">Do you want add a marker of photo camera infringement?</string>
    <string name="speed_limit">Speed limit:</string>
    <string name="name">Name:</string>
    <string name="mph">mph</string>
    <string name="fill_fields">You should fill all fieds</string>
    <string name="camera_type">Camera type:</string>
    <string name="default_camera_selector_prompt">Choose one ...</string>

    <!--Geofences-->
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <!-- Notification-->
    <string name="geofence_transition_notification_text">Click notification to open the app</string>
    <string name="notification_title">You\'re approaching a camera photo infringement</string>

    <!-- velocity alert -->
    <string name="you_are_to">You are to</string>
    <string name="meters_of_a_camera">meters of a camera</string>
    <string name="current_speed">Current speed:</string>
    <string name="no_markers_to_show">There are not markers to show. Please adds some.</string>

</resources>
