<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center_vertical|center_horizontal"
    android:background="@drawable/rounded_corners"
    android:layout_centerInParent="true">

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:background="@drawable/cross"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/speed_alert_text"
            android:text="@string/you_are_to"/>

        <TextView
            android:id="@+id/tv_approach_meters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/speed_alert_numbers"
            android:text="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/speed_alert_text"
            android:text="@string/meters_of_a_camera"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/speed_alert_text"
            android:text="@string/speed_limit"/>

        <TextView
            android:id="@+id/tv_marker_speed_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/speed_alert_numbers"
            android:text="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/speed_alert_text"
            android:text="@string/mph"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/speed_alert_text"
            android:text="@string/current_speed"/>

        <TextView
            android:id="@+id/tv_current_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/speed_alert_numbers"
            android:text="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/speed_alert_text"
            android:text="@string/mph"/>

    </LinearLayout>


</LinearLayout>