<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.MapActivity" />

    <LinearLayout
        android:id="@+id/ll_data_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:gravity="center_vertical|center_horizontal"
        android:background="@drawable/rounded_corners"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/subtitles"
                android:gravity="center_vertical"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/et_name"
                style="@style/subtitles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:hint=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/subtitles"
                android:gravity="center_vertical"
                android:text="@string/speed_limit"/>

            <EditText
                android:id="@+id/et_speed_limit"
                style="@style/subtitles"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitles"
                android:text="@string/mph"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_accept"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/accept"
                android:layout_marginRight="5dp"/>

            <Button
                android:id="@+id/btn_cancel"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

